HouseHogPackage/main/default/objects/Bank__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>First and/or second lines of Headquarters address.</description>
    <label>Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>