HouseHogPackage/main/default/objects/Bank__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City of Bank headquarters.</description>
    <label>City</label>
    <length>28</length>
    <type>Text</type>
</CustomField>