HouseHogPackage/main/default/objects/Bank__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Bank&apos;s main email address.</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>