HouseHogPackage/main/default/objects/Bank__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State of Bank headquarters.</description>
    <inlineHelpText>Two-letter state code.</inlineHelpText>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>