HouseHogPackage/main/default/objects/Bank__c/validationRules/Complete_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_Address</fullName>
    <active>true</active>
    <description>Ensure valid address exists.</description>
    <errorConditionFormula>NOT(
  AND(
     NOT(ISNULL( Address__c )),
     NOT(ISNULL( City__c )),
     REGEX( State__c , &quot;^[A-Z]{2}$&quot;),
     REGEX( Zip_Code__c , &quot;^\\d{5}(\\-\\d{4})?$&quot;)
  )
)</errorConditionFormula>
    <errorMessage>Address and City may not be null. State must be a 2-digit letter code, and Zip Code must be in either &apos;#####&apos; or &apos;#####-####&apos; format.</errorMessage>
</ValidationRule>